# agent-manager

./: .gitignore  Makefile
test/instrumentation-matrix/: .gitignore  DESIGN.md  FINDINGS.md  INSTRUMENTATION-MATRIX-DESIGN.md  INSTRUMENTATION-MATRIX.md  README.md  RUNBOOK.md  matrix.yaml  noxfile.py  pyproject.toml
test/instrumentation-matrix/cells/: langchain_sample.py  llama_index_sample.py  manual_rag_sample.py
test/instrumentation-matrix/contracts/traceloop/v1/: resource.schema.json  span.schema.json
test/instrumentation-matrix/contracts/traceloop/v1/kinds/: agent.schema.json  chain.schema.json  crewaitask.schema.json  llm.schema.json  (+5 more)
test/instrumentation-matrix/harness/: aggregator.py  categorize.py  classify.py  exporter_handle.py  heavy_subset.py  manifest.py  notify.py  reports.py  revalidate.py  validator.py
test/instrumentation-matrix/heavy/: HEAVY-TIER-DEPLOY.md  amp_client.py  diagnostics.py  driver.py  k3d.py  observer.py
test/instrumentation-matrix/providers/: traceloop.py
test/instrumentation-matrix/providers/bootstrap/manual/: sitecustomize.py
test/instrumentation-matrix/providers/bootstrap/traceloop/: sitecustomize.py
test/instrumentation-matrix/scripts/: expand_filter.py  record_cassette.py
test/instrumentation-matrix/tests/: test_aggregator.py  test_categorize.py  test_classify.py  test_exporter_handle.py  test_heavy_client.py  test_heavy_diagnostics.py  test_heavy_subset.py  test_manifest.py  test_notify.py  test_reports.py  test_revalidate.py  test_validator.py
test/instrumentation-matrix/tests/fixtures/: manifest_minimal.yaml
(+451 files in other folders)
