[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "amp-instrumentation-matrix"
version = "0.0.0"
description = "Compatibility matrix test suite for AMP instrumentation"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["harness", "providers"]

[tool.pytest.ini_options]
testpaths = ["tests", "harness"]
addopts = "-q"
# The `vcr` marker is registered by the pytest-recording plugin in cell venvs.
# We deliberately don't use --strict-markers so the harness's own tests (which
# don't have pytest-recording installed) can ignore the marker.
